fix cors problem in user service and check username and email  duplication